fixing bugs on mobile

--- a/css/styleIndex.css
+++ b/css/styleIndex.css
@@ -84,7 +84,7 @@ ul.topnav li.right {
   left: 20px;
   z-index: 100000;
 }
-@media screen and (max-width: 813px){
+@media screen and (max-width: 824px){
   #menuoverlay{
     position: fixed;
     top: 0;
@@ -161,7 +161,7 @@ ul.topnav li.dropdown{
     left: 2px;
   }
 }
-@media screen and (max-width: 813px){
+@media screen and (max-width: 824px){
   ul.topnav img{
     float: none;
     position: relative;
@@ -239,7 +239,7 @@ ul.topnav li.dropdown{
   background-image: url("http://i.dailymail.co.uk/i/pix/2015/10/13/09/2D55A60A00000578-0-image-a-2_1444725976530.jpg");
   background-repeat: no-repeat;
   background-position: 0 60px;
-   background-size: cover; 
+   background-size: cover;
   padding: 250px;
   background-attachment: fixed;
 }
@@ -350,17 +350,20 @@ word-spacing: 50px;
   opacity: 0.5;
   background-position: 0 60px;
 }
-@media only screen and (max-device-width: 813px) {
+@media only screen and (max-device-width: 824px) {
     .transPhoto {
         background-attachment: scroll;
         background-position: center;
     }
     .frontContent{
-      background: url("http://i.dailymail.co.uk/i/pix/2015/10/13/09/2D55A60A00000578-0-image-a-2_1444725976530.jpg") no-repeat center center fixed;
-      -webkit-background-size: contain;
-      -moz-background-size: contain;
-      -o-background-size: contain;
-      background-size: contain;
+      -webkit-background-size: 100%;
+      -moz-background-size: 100%;
+      -o-background-size: 100%;
+      background-size: 100%;
+      -webkit-background-size: cover;
+      -moz-background-size: cover;
+      -o-background-size: cover;
+      background-size: cover;
     }
 }
 /* end of seperator photo */
